samples/_failures_safe/1761497896_3aa318_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_15545518.c: In function ‘main’:
./samples/SAFE/__tmp_15545518.c:132:16: error: missing terminating " character
  132 |         printf("Failed to read
      |                ^~~~~~~~~~~~~~~
./samples/SAFE/__tmp_15545518.c:132:9: error: expected expression at end of input
  132 |         printf("Failed to read
      |         ^~~~~~
./samples/SAFE/__tmp_15545518.c:132:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_15545518.c:132:9: error: expected declaration or statement at end of input
